fixed video on mobile bug

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ h3 {
 }
 
 .mediacontent {
-  margin-top: 30px;
+  margin: 30px auto 0 auto;
   max-width: 350px;
   max-height: 300px;
 }
